# memcard

./: .clang-format  .gitignore  .gitmodules  Dockerfile  README.md  TODO.md  build.sh  memcard.db  memcard.fbp  meson.build
src/: gui_manager.cpp  gui_manager.hpp  main.cpp  main.hpp  meson.build  session_manager.cpp  session_manager.hpp
src/UI/: callbacks.hpp  create_deck_screen_impl.cpp  create_deck_screen_impl.hpp  edit_card_screen_impl.cpp  edit_card_screen_impl.hpp  main_screen_impl.cpp  main_screen_impl.hpp  meson.build  select_deck_screen_impl.cpp  select_deck_screen_impl.hpp
src/UI/message/: meson.build  message.cpp  message.hpp
src/UI/screens/: add_card_boarding_screen_impl.cpp  add_card_boarding_screen_impl.hpp  add_edit_card_screen_impl.cpp  add_edit_card_screen_impl.hpp  browse_cards_screen_impl.cpp  browse_cards_screen_impl.hpp  create_deck_screen_impl.cpp  create_deck_screen_impl.hpp  main_screen_impl.cpp  main_screen_impl.hpp  meson.build  practice_screen_impl.cpp  practice_screen_impl.hpp  select_deck_screen_impl.cpp  select_deck_screen_impl.hpp  show_card_screen_impl.cpp  show_card_screen_impl.hpp
src/database/: database_handler.hpp  meson.build  sqlite_handler.cpp  sqlite_handler.hpp
src/generator/: meson.build  uuid.cpp  uuid.hpp
src/types/: card.hpp  deck.hpp
test/: meson.build  run_tests.sh
test/database/: meson.build  test_database.cpp
test/generator/: meson.build  test_uuid.cpp
