
src_files += files('main_screen_impl.cpp')
src_files += files('create_deck_screen_impl.cpp')
src_files += files('add_edit_card_screen_impl.cpp')
src_files += files('select_deck_screen_impl.cpp')
src_files += files('show_card_screen_impl.cpp')
src_files += files('practice_screen_impl.cpp')
src_files += files('add_card_boarding_screen_impl.cpp')
